--- a/sync/Cargo.toml
+++ b/sync/Cargo.toml
@@ -30,6 +30,7 @@ lru-cache = { git = "https://github.com/nervosnetwork/lru-cache", rev = "a35fdb8
 sentry = "^0.15.4"
 hashbrown = "0.4.0"
 futures = "0.1"
+tokio-threadpool = "0.1.13"
 
 [dev-dependencies]
 ckb-notify = { path = "../notify" }
